--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=test-products
 server.port=8080
 spring.datasource.url=jdbc:h2:mem:customer-db
+
+server.servlet.context-path=/api
