--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
 spring.jpa.show-sql=${SHOW_SQL:false}
 spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQLDialect}
+
+#spring.profiles.active=dev
+rsa.public-key=${SECRET_KEY_PUBLIC:classpath:certs/keyPublic-dev.pem}
+#
+# variable pour contacter les autres API :
+security.service.url=${SECURITY_SERVICE:http://localhost:8091/api}
