--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.show-sql=${SHOW_SQL:false}
 spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQLDialect}
 
 #spring.profiles.active=dev
-rsa.public-key=classpath:certs/keyPublic-dev.pem
+rsa.public-key=${SECRET_KEY_PUBLIC:classpath:certs/keyPublic-dev.pem}
 #
 # variable pour contacter les autres API :
+security.service.url=${SECURITY_SERVICE:http://localhost:8091/api}
